-
Type:
Bug
-
Status: Closed (View Workflow)
-
Priority:
Major
-
Resolution: Fixed
-
Affects Version/s: 10.2.4, 10.2, 10.2.7
-
Fix Version/s: 10.2.8
-
Component/s: Storage Engine - MyISAM
-
Labels:
-
Environment:Red Hat Linux 6.9
Linux hostname 2.6.32-696.6.3.el6.x86_64 #1 SMP Fri Jun 30 13:24:18 EDT 2017 x86_64 x86_64 x86_64 GNU/Linux
This sample query corrupts MyISAM table.
select * from pn_assigned where |
((pnmin<='2135760' and pnmax>='2135760') |
or (pnmin<='2135790' and pnmax>='2135790') |
or (pnmin>='2135760' and pnmax<='2135790')) order by pnmin |