MDEV-13535 Query on MyISAM table corrupts the table

don't assume that the table always has a primary key,
head->s->primary_key might be MAX_KEY, which won't start keyread.